--- a/src/index.css
+++ b/src/index.css
@@ -9,19 +9,34 @@
 } */
 
 
-body {
+/*body {
   background-image: url('images/teal.jpg');
   background-position: center; /* Center the image */
-  background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: fill;
+  /*background-repeat: no-repeat; /* Do not repeat the image */
+  /*background-size: fill;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
 }
+*/
 
-code {
+/*code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
+
+.Nav {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  padding: 0px 50px 0px 50px;
+  /*margin: 0px 20px 0px 10px;*/
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  background-color: white;
+
+} 
+
+
 
 body {
   background-image: url('images/teal.jpg');
