--- a/src/Landing/components/Nav/Nav.css
+++ b/src/Landing/components/Nav/Nav.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
  #headWrap {
       display: flex;
       justify-content: space-between;
@@ -18,8 +17,11 @@ li {
 
 a:link {
       text-decoration: none; 
-=======
-header {
-    height: 30px;
->>>>>>> alom
+}
+
+#navwrap{
+    display: flex;
+    flex-direction: row;
+    
+    
 }
