--- a/src/Landing/components/Nav/modal/modal.css
+++ b/src/Landing/components/Nav/modal/modal.css
@@ -1,8 +1,16 @@
-button {
+#signUpButton {
     background-color: black;
+    margin: 10px;
+    height:30px;
 }
 
 #modalButton {
     margin: 10px 0;
+    background-color: black;
 }
 
+#formwrap{
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+}
