cities now populate the dropdown in create post modal

--- a/src/Landing/components/Hero/Hero.css
+++ b/src/Landing/components/Hero/Hero.css
@@ -1,6 +1,12 @@
 div {
     width: auto;
-    height:576px;
+    height: 700px;
+    /* height:576px;
+    position: relative; */
+    /* top: -40px; */
+    
+    
+
 }
 
 img {
