--- a/src/Nav/Nav.css
+++ b/src/Nav/Nav.css
@@ -4,12 +4,17 @@
       font-family: 'Kaushan Script', cursive;
       font-weight: lighter;
       height: 150px;
-      color: whitesmoke
+      color: whitesmoke;
+      /* position: relative;
+      top: 30px;
+      z-index: 1;
+      padding: 3em; */
  } 
   
 nav a {
       display: inline-block;
       padding: 20px;
+      
 }
 
 li {
@@ -41,4 +46,5 @@ header {
 
 .title h4 {
     font-size: 26px;
+     
 }
