--- a/src/index.css
+++ b/src/index.css
@@ -29,11 +29,11 @@
 
 
 body {
-  background-image: url('images/teal.jpg');
+  background-image: url('images/rawpixel-603019-unsplash.jpg');
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: fill;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
-  color: #666;
+  color:grey;
 }
