--- a/src/Posts/containers/CityContainer/PostsContainer/PostsContainer.css
+++ b/src/Posts/containers/CityContainer/PostsContainer/PostsContainer.css
@@ -2,5 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background: navy;
+    background: lightsteelblue;
+
+   
 }
