--- a/src/Landing/components/About/About.css
+++ b/src/Landing/components/About/About.css
@@ -6,7 +6,7 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    background: grey;
+    background: rgba(50, 50, 50, .8);
 }
 
 #container p {
